# Vamp

./: .gitignore  CMakeLists.txt
Src/: GameplayConfig.cpp  GameplayConfig.h  ImGuiHelper.cpp  ImGuiHelper.h  SpriteBatch.cpp  SpriteBatch.h  Vamp.cpp  VampArchive.cpp  VampArchive.h  VampAtlasMgr.cpp  VampAtlasMgr.h  VampContainer.h  VampEngine.cpp  VampEngine.h  VampGFX.cpp  VampGFX.h  VampMath.cpp  VampMath.h  VampScene.cpp  VampScene.h  VampSprite.cpp  VampSprite.h  VampTexture.cpp  VampTexture.h  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h
Src/Shaders/: SpriteBatch.hlsl
Src/imgui/: imconfig.h  imgui.h
